next changes added for login component and routing issue fixed

--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -36,7 +36,9 @@
         <!-- Right Section: Avatar and Profile Icon -->
         <div class="right-section d-flex align-items-center">
             <img src="assets/icons/chat-icon.png" alt="Profile Icon" class="profile-icon" />
-            <div class="name-logo">S</div>
+            <img [src]="userProfileImg" alt="" class="name-logo">
+            &nbsp;&nbsp;
+            <i class="material-icons" style="cursor: pointer;" (click)="signOut()">logout</i>
         </div>
     </div>
 </nav>
