--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -9,8 +9,8 @@
             <h2>Welcome to the University League</h2>
             <p>Here, you can unwrap the gift of choice with us.</p>
             <!-- Use a button for login -->
-            <img src="assets/icons/google-login-button.png" alt="Google Icon" class="google-icon" #loginRef />
-
+            <!-- <img src="assets/icons/google-login-button.png" alt="Google Icon" class="google-icon" #loginRef /> -->
+            <div id="google-btn"></div>
         </div>
     </div>
 </div>
