--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,7 +1,7 @@
 <div class="main-container">
     <div class="welcome-section">
         <div class="greeting">
-            <h1>Hello {{Name}}!</h1>
+            <h1>Hello {{name}}!</h1>
             <p>Explore the <span class="highlight">Zones of Possibility.</span></p>
             <img src="assets/icons/long-arrow.png" alt="arrow">
         </div>
@@ -29,7 +29,8 @@
                 <a [routerLink]="'/learning-zone'" class="see-all-link">See All &gt;</a>
             </div>
             <div class="card-container">
-                <div class="card" *ngFor="let card of learningZoneCards.slice(0, 3)">
+                <div class="card" *ngFor="let card of learningZoneCards.slice(0, 3)"
+                    (click)="navigateToLearningDetail(card.title)">
                     <img [src]="card.image" alt="{{card.title}}" />
                     <p>{{card.title}}</p>
                 </div>
@@ -45,7 +46,8 @@
                 <a [routerLink]="'/skill-zone'" class="see-all-link">See All &gt;</a>
             </div>
             <div class="card-container">
-                <div class="card" *ngFor="let card of skillZoneCards.slice(0, 3)">
+                <div class="card" *ngFor="let card of skillZoneCards.slice(0, 3)"
+                    (click)="navigateToSkillDetail(card.title)">
                     <img [src]="card.image" alt="{{card.title}}" />
                     <p>{{card.title}}</p>
                 </div>
