--- a/src/app/zone/international-zone/international-zone.component.html
+++ b/src/app/zone/international-zone/international-zone.component.html
@@ -1,7 +1,7 @@
 <div class="international-zone-container">
     <!-- Header -->
     <div class="header">
-        <img src="assets/icons/back-arrow.png" alt="Back Icon" routerLink="" class="back-button" />
+        <img src="assets/icons/back-arrow.png" alt="Back Icon" routerLink="/dashboard" class="back-button" />
         <div class="title-container">
             <h1>International Zone</h1>
             <img src="assets/icons/long-arrow.png" alt="Arrow" class="long-arrow" />
