--- a/src/app/zone/skill-zone/skill-zone.component.html
+++ b/src/app/zone/skill-zone/skill-zone.component.html
@@ -18,7 +18,7 @@
             <div class="play-section-line"></div> <!-- Horizontal line in the same row -->
         </div>
         <div class="play-card-container">
-            <div class="play-card" *ngFor="let card of learnAndPlayCards" (click)="navigateToCategory(card.title)">
+            <div class="play-card" *ngFor="let card of skillZoneCards" (click)="navigateToCategory(card.title)">
                 <div class="play-card-content">
                     <img [src]="card.image" alt="{{ card.title }}" class="play-card-image-left" />
                     <div class="play-card-details">
