--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -29,7 +29,8 @@
                 <a [routerLink]="'/learning-zone'" class="see-all-link">See All &gt;</a>
             </div>
             <div class="card-container">
-                <div class="card" *ngFor="let card of learningZoneCards" (click)="navigateToLearningDetail(card.title)">
+                <div class="card" *ngFor="let card of learningZoneCards.slice(0, 3)"
+                    (click)="navigateToLearningDetail(card.title)">
                     <img [src]="card.image" alt="{{card.title}}" />
                     <p>{{card.title}}</p>
                 </div>
@@ -45,7 +46,8 @@
                 <a [routerLink]="'/skill-zone'" class="see-all-link">See All &gt;</a>
             </div>
             <div class="card-container">
-                <div class="card" *ngFor="let card of skillZoneCards" (click)="navigateToSkillDetail(card.title)">
+                <div class="card" *ngFor="let card of skillZoneCards.slice(0, 3)"
+                    (click)="navigateToSkillDetail(card.title)">
                     <img [src]="card.image" alt="{{card.title}}" />
                     <p>{{card.title}}</p>
                 </div>
