new changes added home navigation and google service apis

--- a/src/app/core/footer/footer.component.html
+++ b/src/app/core/footer/footer.component.html
@@ -5,7 +5,7 @@
         </span>
         <span class="footer-label">Home</span>
     </div>
-    <div class="footer-item">
+    <div class="footer-item" routerLink="/leaderboard">
         <span class="footer-icon">
             <i class="material-icons">leaderboard</i>
         </span>
