new changes added in placement zone

--- a/src/app/zone/placement-zone/placement-zone.component.html
+++ b/src/app/zone/placement-zone/placement-zone.component.html
@@ -26,13 +26,14 @@
                             <p>For suggestions that are personalized to your needs.</p>
                         </div>
                         <div class="icon-container">
-                            <img src="assets/icons/categories-icon.png" alt="Career Icon" />
+                            <img src="assets/icons/categories-icon.png" alt="Career Evaluation Icon" />
                         </div>
                     </div>
                     <div class="card-explore">
-                        <span class="explore-text">Add it →</span>
+                        <span class="explore-text">Evaluate <span style="font-size: 16px;">🔒</span></span>
                     </div>
                 </div>
+
                 <div class="card">
                     <div class="content">
                         <div class="text-content">
@@ -42,11 +43,11 @@
                                 successful career.</p>
                         </div>
                         <div class="icon-container">
-                            <img src="assets/icons/career-sheet-icon.png" alt="Career Icon" />
+                            <img src="assets/icons/career-sheet-icon.png" alt="Career Evaluation Icon" />
                         </div>
                     </div>
                     <div class="card-explore">
-                        <span class="explore-text">Evaluate →</span>
+                        <span class="explore-text">Evaluate <span style="font-size: 16px;">🔒</span></span>
                     </div>
                 </div>
             </div>
@@ -59,18 +60,18 @@
                 </h2>
                 <div class="section-line"></div>
             </div>
-            <div class="career-cards">
-                <div class="card">
+            <div class="career-opportunities-cards">
+                <div class="opportunity-card">
                     <div class="content">
-                        <div class="icon-container card-img">
-                            <img src="assets/cards/career-card.png" alt="Career Icon" />
+                        <div class="icon-container">
+                            <img src="assets/cards/career-card.png" alt="Career Fest Icon" />
                         </div>
-                        <div class="text-content-opportunities">
+                        <div class="text-content">
                             <h5>CAREER FEST</h5>
                             <p>Discover exciting career opportunities at college career fests.</p>
                         </div>
                     </div>
-                    <div class="card-explore">
+                    <div class="opportunity-explore">
                         <span class="explore-text">Explore →</span>
                     </div>
                 </div>
