--- a/src/app/zone/placement-zone/placement-zone.component.html
+++ b/src/app/zone/placement-zone/placement-zone.component.html
@@ -81,7 +81,9 @@
 
     <!-- View All Jobs -->
     <div class="view-all-jobs">
-        <button class="view-btn">VIEW ALL JOBS →</button>
+        <div class="view-btn"><img src="assets/icons/view-all-icon.png" alt="">
+            <span>VIEW ALL JOBS →</span>
+        </div>
     </div>
 
     <!-- Industry Wise Jobs -->
