new changes added

--- a/src/app/core/footer/footer.component.html
+++ b/src/app/core/footer/footer.component.html
@@ -11,7 +11,7 @@
         </span>
         <span class="footer-label">Leaderboard</span>
     </div>
-    <div class="footer-item" [ngClass]="{'active': activeLink === 'dashboard'}">
+    <div class="footer-item" [ngClass]="{'active': activeLink === 'dashboard'}" routerLink="/dashboard">
         <span class="footer-icon">
             <i class="material-icons">dashboard</i>
         </span>
