--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -26,7 +26,7 @@
             </li>
             <li class="nav-item">
                 <a class="nav-link" [ngClass]="{'active': activeLink === 'dashboard'}"
-                    (click)="setActiveLink('dashboard')">
+                    (click)="setActiveLink('dashboard')" routerLink="/dashboard">
                     <i class="material-icons">dashboard</i>
                     <span>Dashboard</span>
                 </a>
