--- a/src/app/zone/skill-zone/skill-zone.component.html
+++ b/src/app/zone/skill-zone/skill-zone.component.html
@@ -18,11 +18,11 @@
             <div class="play-section-line"></div> <!-- Horizontal line in the same row -->
         </div>
         <div class="play-card-container">
-            <div class="play-card" *ngFor="let card of skillZoneCards" (click)="navigateToCategory(card.title)">
+            <div class="play-card" *ngFor="let card of skillZoneCards" (click)="navigateToCategory(card)">
                 <div class="play-card-content">
                     <img [src]="card.image" alt="{{ card.title }}" class="play-card-image-left" />
                     <div class="play-card-details">
-                        <p class="play-card-title">{{ card.title }}</p>
+                        <p class="play-card-title">{{ card.title | uppercase }}</p>
                         <div class="play-card-stats">
                             <p class="play-card-solved">🏆 {{ card.solved }} SOLVED</p>
                             <p class="play-card-goals">⚽ {{ card.goals }} GOALS</p>
@@ -30,8 +30,6 @@
                     </div>
                 </div>
             </div>
-
-
         </div>
     </div>
 
