--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -30,7 +30,7 @@
             </div>
             <div class="card-container">
                 <div class="card" *ngFor="let card of learningZoneCards.slice(0, 3)"
-                    (click)="navigateToLearningDetail(card.title)">
+                    (click)="navigateToLearningDetail(card)">
                     <img [src]="card.image" alt="{{card.title}}" />
                     <p>{{ card.title | uppercase }}</p>
                 </div>
