--- a/src/app/zone/international-zone/international-zone.component.html
+++ b/src/app/zone/international-zone/international-zone.component.html
@@ -30,7 +30,7 @@
     <div class="international-zone">
 
         <div class="card-container">
-            <div class="card" *ngFor="let place of places" [routerLink]="'/international-zone/' + place.name">
+            <div class="card" *ngFor="let place of places" (click)="navigateToPlace(place)">
                 <div class="image-container">
                     <img [src]="place.image" [alt]="place.name" />
                 </div>
