--- a/src/app/zone/learning-zone/learning-zone.component.html
+++ b/src/app/zone/learning-zone/learning-zone.component.html
@@ -19,7 +19,7 @@
             <div class="section-line"></div>
         </div>
         <div class="card-container">
-            <div class="card" *ngFor="let item of knowledgeHubCards" (click)="navigateToDetail(item.title)">
+            <div class="card" *ngFor="let item of knowledgeHubCards" (click)="navigateToDetail(item)">
                 <div class="card-heading">
                     <p class="card-title">{{ item.title| uppercase }}</p>
                     <div class="card-arrow">
@@ -40,7 +40,7 @@
             <div class="play-section-line"></div>
         </div>
         <div class="play-card-container">
-            <div class="play-card" *ngFor="let card of learningZoneCards" (click)="navigateToDetail(card.title)">
+            <div class="play-card" *ngFor="let card of learningZoneCards" (click)="navigateToDetail(card)">
                 <div class="play-card-content">
                     <img [src]="card.image" alt="{{ card.title }}" class="play-card-image-left" />
                     <div class="play-card-details">
